# sokoban-solver

./: .gitignore  README.md  RESULTS_MICROBAN_COMPARE.md  compare.html  generate_baselines.py  heuristic_optimizer.py  index.html  main.js  optimization_results.json  optimization_results_20.json  optimization_results_50_select_20.json  play.html  sokoban_astar_worker.js  sokoban_solver.py  solver-festival-rust-worker.js  solver-festival-rust.js  solver.js  visualization.ipynb
festival-rust/: Cargo.toml  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETE.md  README.md
festival-rust/pkg/: festival_rust.d.ts  festival_rust.js  festival_rust_bg.wasm  festival_rust_bg.wasm.d.ts
festival-rust/pkg-node/: festival_rust.d.ts  festival_rust.js  festival_rust_bg.wasm  festival_rust_bg.wasm.d.ts
festival-rust/src/: board.rs  deadlock.rs  distance.rs  heuristic.rs  lib.rs  pattern_db.rs  search.rs  util.rs
grids/: Alberto Garcia 2.txt  Alberto Garcia 3.txt  Alberto Garcia 4.txt  Alberto Garcia.txt  Aruba1.txt  Aruba2.txt  Aruba3.txt  Aruba4.txt  Aruba5.txt  Aruba6.txt  Aruba7.txt  Aruba8.txt  Aruba9.txt  Base-Levels.txt  Boxxle 1.txt  Boxxle 2.txt  LOMA.txt  Mas Sasquatch.txt  Micro Cosmos.txt  Microban II.txt  Microban III.txt  Microban IV.txt  Microban.txt  Mini Cosmos.txt  Nabo Cosmos.txt  Original & Extra.txt  Pico Cosmos.txt  Sasquatch III.txt  Sasquatch IV.txt  Sasquatch IX.txt  Sasquatch V.txt  Sasquatch VI.txt  Sasquatch VII.txt  Sasquatch VIII.txt  Sasquatch X.txt  Sasquatch.txt  The Bagatelle 2 collection.txt  The Bagatelle collection.txt  The Cantrip 2 collection.txt  (+7 more)
(+8 files in other folders)
